--- a/src/Components/FilmRoll/FilmRoll.module.scss
+++ b/src/Components/FilmRoll/FilmRoll.module.scss
@@ -1,74 +1,99 @@
+.scrollpoint {
+    position: absolute;
+    right: 50px;
+    width: 140px;
+    // top: -10px;
+    opacity: 0.7;
+}
 .enclose::-webkit-scrollbar {
     display: none;
 }
 
 .enclose {
-    
+
     // .box {
-        //     --mask:
-        //       radial-gradient(193.27px at 50% calc(100% + 166.50px),#0000 calc(99% - 8px),#000 calc(101% - 8px) 99%,#0000 101%) calc(50% - 180px) calc(50% - 49px + .5px)/360px 98px repeat-x,
-        //       radial-gradient(193.27px at 50% -166.5px,#0000 calc(99% - 8px),#000 calc(101% - 8px) 99%,#0000 101%) 50% calc(50% + 49px)/360px 98px repeat-x;
-        //     -webkit-mask: var(--mask);
-        //             mask: var(--mask);
-        //   }
-        width: 100%;
-        overflow-x: scroll;
-        scroll-behavior: smooth;
-        margin-left: auto;
-        position: relative;
-        
-        .roll::-webkit-scrollbar {
-            display: none;
-        }
+    //     --mask:
+    //       radial-gradient(193.27px at 50% calc(100% + 166.50px),#0000 calc(99% - 8px),#000 calc(101% - 8px) 99%,#0000 101%) calc(50% - 180px) calc(50% - 49px + .5px)/360px 98px repeat-x,
+    //       radial-gradient(193.27px at 50% -166.5px,#0000 calc(99% - 8px),#000 calc(101% - 8px) 99%,#0000 101%) 50% calc(50% + 49px)/360px 98px repeat-x;
+    //     -webkit-mask: var(--mask);
+    //             mask: var(--mask);
+    //   }
+    width: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+    margin-left: auto;
+    position: relative;
+    height: 405px;
+    margin-bottom: 3rem;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    position: relative;
+
+
+    .roll::-webkit-scrollbar,
+    .enclose::-webkit-scrollbar {
+        display: none;
+    }
 
     .roll {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
         display: flex;
         overflow-x: scroll;
-        height: 500px;
-        width: 400%;
+        overflow-y: hidden;
+        height: 400px;
+        width: 5265px;
 
         .oneRoll {
             position: relative;
-            width: 80vw;
-            height: fit-content;
+            // width: 80vw;
+            // height: fit-content;
+            height: 100%;
+            width: 25%;
+            flex-shrink: 0;
 
             .reel {
-                width: 100%;
                 z-index: 11 !important;
                 position: absolute;
                 top: 11px;
                 left: 0px;
+                height: 100%;
             }
 
-            .imgsEnclose:nth-child(2) .imgs, .imgsEnclose:nth-child(2) .click {
+            .imgsEnclose:nth-child(2) .imgs,
+            .imgsEnclose:nth-child(2) .click {
                 position: absolute;
                 left: 0px;
-                top: 140px;
+                top: 160px;
                 transform: rotateY(-39deg) rotateX(-10deg) rotateZ(5deg) scale(1.3);
             }
 
-            .imgsEnclose:nth-child(3) .imgs, .imgsEnclose:nth-child(3) .click {
+            .imgsEnclose:nth-child(3) .imgs,
+            .imgsEnclose:nth-child(3) .click {
                 position: absolute;
                 left: 25%;
-                top: 135px;
+                top: 150px;
                 transform: rotateY(41deg) rotateX(-9deg) rotateZ(-11deg) scale(1.3);
             }
 
-            .imgsEnclose:nth-child(4) .imgs, .imgsEnclose:nth-child(4) .click {
+            .imgsEnclose:nth-child(4) .imgs,
+            .imgsEnclose:nth-child(4) .click {
                 position: absolute;
                 left: 50%;
-                top: 77px;
+                top: 85px;
                 transform: rotateY(41deg) rotateX(-9deg) rotateZ(-11deg) scale(1.3);
             }
 
-            .imgsEnclose:nth-child(5) .imgs, .imgsEnclose:nth-child(5) .click {
+            .imgsEnclose:nth-child(5) .imgs,
+            .imgsEnclose:nth-child(5) .click {
                 position: absolute;
                 left: 75%;
-                top: 68px;
+                top: 85px;
                 transform: rotateY(42deg) rotateX(12deg) rotateZ(10deg) scale(1.3);
             }
 
-            .click{
+            .click {
                 width: 25%;
                 aspect-ratio: 1.8;
                 cursor: pointer;
@@ -81,7 +106,8 @@
             }
         }
     }
-    .backdrop{
+
+    .backdrop {
         position: fixed;
         z-index: 14;
         background: rgba(0, 0, 0, 0.448);
@@ -90,7 +116,8 @@
         left: 0px;
         top: 0px;
     }
-    .clicked img{
+
+    .clicked img {
         position: fixed;
         z-index: 15;
         width: 50%;
