UPD:white horizontal line

--- a/src/Pages/Artists/Artists.module.scss
+++ b/src/Pages/Artists/Artists.module.scss
@@ -599,6 +599,10 @@
   font-size: 100vw;
 }
 
+#whitehorline{
+  background-color: rgba(239, 239, 239, 0.75) !important;
+}
+
 @media only screen and (max-width: 600px) {
   .artistsmain {
     padding-top: 30vw;
