ADDED: developers section

--- a/src/Components/Team/TeamMembers/TeamMember.module.scss
+++ b/src/Components/Team/TeamMembers/TeamMember.module.scss
@@ -1,3 +1,15 @@
+.Designation {
+  margin-bottom: 1.6rem;
+  text-align: center;
+  font-size: 3.6rem;
+  background-image: linear-gradient(90deg, #371000 14.1%, #ffbf2a 82.1%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: "Philosopher";
+  font-weight: 700;
+}
+
 .containerMember {
   margin-left: 10em;
   margin-right: 10em;
