--- a/src/Components/FilmRoll/FilmRoll.module.scss
+++ b/src/Components/FilmRoll/FilmRoll.module.scss
@@ -122,8 +122,14 @@
         z-index: 15;
         width: 50%;
         left: 50%;
-        top: 77px;
-        transform: rotateY(41deg) rotateX(-9deg) rotateZ(-11deg) scale(1.3);
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+      }
+
+      @media (width<800){
+        .clicked img{
+          width: 90%;
+        }
       }
 
       .imgsEnclose:nth-child(5) .imgs,
@@ -162,6 +168,5 @@
     width: 50%;
     left: 50%;
     top: 50%;
-    transform: translateX(-50%) translateY(-50%);
   }
 // }
