SOLVED: syntax error

--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -395,8 +395,7 @@
             transform: translateY(-2%);
         }
     }
-}
-=======
+// }
   position: relative;
   height: 100vh;
   // justify-content: center;
