--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,17 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Philosopher&display=swap");
 
 .HeaderBox {
+
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
   justify-content: center;
+  align-items: center;
   padding: 4% 0;
-  margin-bottom: -6%;
+  
 }
+
+
 
 .main {
   width: 100px;
   height: 100px;
   left: 100px;
+  margin: 0 7%;
 
   .b {
     position: relative;
@@ -88,26 +94,34 @@ h1 {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 450px) {
   .main {
     width: 50px;
     height: 50px;
     left: 100px;
 
     .d {
-      top: -46px;
+      top: -36px;
       left: 12px;
       width: 54%;
     }
 
     .g {
-      top: -74px;
-      left: -18px;
-      width: 131%;
+      top: -71px;
+      left: -19px;
+      width: 138%;
     }
 
     .p {
-      top: -106px;
+      top: -100px;
     }
   }
+
+  @keyframes moveGm {
+    to {
+      transform: rotate(20deg) translate(-4px);
+    }
+  }
+
+
 }
