--- a/src/Pages/Events/Events.module.scss
+++ b/src/Pages/Events/Events.module.scss
@@ -11,9 +11,10 @@
   overflow: hidden;
 
   .content {
-    padding: 5% 15%;
+    padding: 0 15%;
     font-size: 3vmin;
     text-align: center;
+    line-height: 30px;
     font-family: "Philosopher", sans-serif;
   }
 }
@@ -58,12 +59,18 @@
 @media only screen and (max-width: 600px) {
   .main {
     padding-top: 50px;
+    .content {
+      padding: 3% 15%;
+      font-size: 3vmin;
+      line-height: 20px;
+     
+    }
+  
   }
 
-  .content {
-    font-size: 2vmin;
-  }
+  
 
+ 
   #phoolLeft {
     left: 7%;
   }
