--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -2,9 +2,10 @@
 // This is a part of Template
 .home {
   // height: 100vh;
+  overflow: hidden;
   .hero_enclose{
     height: 110vh;
-    overflow: hidden;
+    // overflow: hidden;
   }
   h1 {
     font-weight: bold;
