--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -8,6 +8,8 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     top: 100vh;
+    width: 100%;
+    overflow: hidden;
 }
 .bush_mobile {
     position: absolute;
@@ -16,6 +18,8 @@
     left: 50%;
     transform: translateX(-50%) translateY(-55%);
     top: 100vh;
+    width: 100%;
+    overflow: hidden;
 }
 
 .hero::-webkit-scrollbar {
