--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -5,6 +5,7 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   text-align: center;
   transition: all 0.5s linear;
+  z-index: 2000;
 }
 
 .navbarContainer {
@@ -91,7 +92,7 @@
   cursor: pointer;
   padding: 25px;
   width: 90px;
-  z-index: 100;
+  z-index: 2001;
 }
 
 .hamburgerMenu span {
@@ -112,10 +113,10 @@
     left: -100%;
     opacity: 0;
     top: 0;
-    bottom: 0;
+    // bottom: 0;
     position: fixed;
     transition: all 0.5s ease;
-    z-index: 1;
+    z-index: 2000;
     width: 75vw;
   }
 
