--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -9,7 +9,8 @@
   padding: 4% 0;
 }
 
-.heading {
+.heading  {
+  text-align: center;
   word-break: break-word;
 }
 
@@ -95,6 +96,11 @@ h1 {
 }
 
 @media only screen and (max-width: 450px) {
+  .heading {
+    height: auto;
+    width: 180px;
+    margin: 0 -5px;
+  }
   .main {
     width: 50px;
     height: 50px;
