--- a/src/Pages/Artists/Artists.module.scss
+++ b/src/Pages/Artists/Artists.module.scss
@@ -678,6 +678,11 @@
 }
 
 @media only screen and (max-width: 660px) {
+  .headBox {
+    padding-top: 15%;
+    margin-bottom: -10%;
+  }
+
   .artistsmain {
     padding-left: 0 !important;
     padding-right: 0 !important;
