--- a/src/Pages/Events/Events.module.scss
+++ b/src/Pages/Events/Events.module.scss
@@ -5,7 +5,7 @@
 }
 
 .main {
-  background-image: url("src/Assets/texture.png");
+  background-image: url("https://res.cloudinary.com/dp92qug2f/image/upload/v1677668803/posua/bg-artists_tpba1w.jpg");
   height: 100%;
   width: 100%;
   overflow: hidden;
