--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,7 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Philosopher:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .navbar {
-  background-color: rgba(153, 76, 22, 0.2);
+  background-color: white;
+  backdrop-filter: blur(1em);
+  position: fixed;
+  width: 100%;
+  top: 0;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   text-align: center;
   transition: all 0.5s linear;
@@ -118,6 +122,15 @@
     transition: all 0.5s ease;
     z-index: 2000;
     width: 75vw;
+  }
+  
+  .navbar {
+    background-color: transparent;
+    backdrop-filter: none;
+    position: none;
+    width: 0;
+    height: 100vh;
+    box-shadow: none;
   }
 
   .navbarContainer.active {
