--- a/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
+++ b/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   text-align: center;
   justify-content: space-between;
-  padding-top: 4rem;
+  padding-top: 5rem;
 }
 
 .containerflower {
@@ -51,11 +51,11 @@
     justify-content: center;
   }
   p {
-    padding-top: 6rem;
+    padding-top: 4rem;
     font-family: "Philosopher", sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     line-height: 34px;
     text-align: center;
 
@@ -113,8 +113,11 @@
       display: none;
     }
     .WordingTeamPosua > p {
-      font-size: 1.2rem;
-      top: 106px;
+      margin-inline: 2rem;
+      font-size: .9rem;
+      line-height: 1.4rem;
+      padding-top: 2rem;
+      // top: 106px;
     }
     .Heading {
       font-size: 2.7rem;
