--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -10,4 +10,22 @@
   h1 {
     font-weight: bold;
   }
+
+  .letter{
+    height:100%;
+    padding-top: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img{
+    width: 80rem;
+    }
+
+    @media only screen and (max-width:1070px){
+      img{
+        width: 80%;
+        }
+    }
+  }
 }
