--- a/src/Pages/Events/Events.module.scss
+++ b/src/Pages/Events/Events.module.scss
@@ -5,9 +5,9 @@
 }
 
 .main {
-  background-image: url("src/Assets/texture.png");
-  height: 100%;
-  width: 100%;
+  background-image: url("https://res.cloudinary.com/dp92qug2f/image/upload/v1677668803/posua/bg-artists_tpba1w.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   overflow: hidden;
 
   .content {
