--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -2,6 +2,9 @@
 // This is a part of Template
 .home {
   // height: 100vh;
+  background-image: url(https://res.cloudinary.com/dp92qug2f/image/upload/v1677668803/posua/bg-artists_tpba1w.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   overflow: hidden;
   .hero_enclose{
     height: 110vh;
