--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -2,6 +2,10 @@
 
   .navbar {
     background-color: rgba(153, 76, 22, 0.2);
+    backdrop-filter: blur(1em);
+    position: fixed;
+    width: 100%;
+    top: 0;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
     transition: all 0.5s linear;
@@ -104,11 +108,18 @@
     transition: all 0.2s ease;
   }
   @media screen and (max-width: 768px) {
+    .navbar {
+      background-color: transparent;
+      backdrop-filter: none;
+      position: none;
+      width: 0;
+      height: 100vh;
+      box-shadow: none;
+    }
     .navbarContainer {
     flex-direction: column;
     gap: 2em;
     height: 100%;
-    position: absolute;
     left: -100%;
     opacity: 0;
     top: 0;
