UPD:remove onclick for previous artist

--- a/src/Pages/Artists/Artists.module.scss
+++ b/src/Pages/Artists/Artists.module.scss
@@ -587,7 +587,7 @@
   order: 1;
   margin-top: 8vw;
   margin-bottom: 8vw;
-  cursor: pointer;
+  // cursor: pointer;
   position: relative;
   &#hideup {
     animation: opacitytransition 0.5s ease-in;
