--- a/src/Pages/Artists/Artists.module.scss
+++ b/src/Pages/Artists/Artists.module.scss
@@ -351,6 +351,10 @@
 #coverimg{
   object-fit: cover;
 }
+
+// #containimg{
+//   object-fit: contain;
+// }
 .artistdetails {
   width: 100%;
   text-align: left;
