--- a/src/Pages/Sponsors/Sponsors.module.scss
+++ b/src/Pages/Sponsors/Sponsors.module.scss
@@ -100,6 +100,47 @@
       left: 50%;
       transform: translate(-50%, -80%);
     }
+    .cubeimg1{
+      position: absolute;
+      z-index: 5;
+      width: 100%;
+      // height: 58%;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -40%);
+      line-height: 1.6;
+      text-align: center;
+      font-size: 3.1vw;
+    }
+    .cubeimg2 {
+      position: absolute;
+      z-index: 5;
+      width: 100%;
+      // height: 58%;
+      text-align: center;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -60%);
+      line-height: 1.6;
+      font-size: 4vw;
+      margin-left: auto;
+      margin-right: auto;
+      color: #433d07 !important;
+      font-weight: 900;
+    }
+    .cubeimg3 {
+      position: absolute;
+      z-index: 5;
+      width: 100%;
+      text-align: center;
+      // height: 58%;
+      pointer-events: none;
+      line-height: 1.6;
+      font-size: 3.1vw;
+      top: 80%;
+      left: 50%;
+      transform: translate(-50%, -80%);
+    }
     h1 {
       position: absolute;
       z-index: 5;
@@ -128,5 +169,10 @@
     h1 {
       font-size: 7vw !important;
     }
+  }
+
+  .cubeimg2 {
+    font-size: 5vw !important;
+    font-weight: 900 !important;
   }
 }
